2000-12-19  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* configure.in: fixed --disable-long-long-warnings

2000-12-15  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* conf/Configuration.cc: moved BeOS config file to ~/config/settings/

2000-12-14  Jeff Freedman  <jeff@amy.nerble.net>

	* Schec. usecode opcode 0x56 means:  play speech track.

2000-12-14  Tristan Tarrant <nadir@users.sourceforge.net>
	* configure.in: Fill out GTK+ discovery stuff
	* Makefile.am, mapedit/Makefile.am: automake stuff for above
	* mapedit/.cvsignore: added shapetest

2000-12-13  Jeff Freedman  <jeff@amy.nerble.net>
	* Adding drag-and-drop support (but not working yet).

2000-12-13  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* drag.cc: fixed 'hack-moving monsters crash' bug
	re-center screen when hack-moving yourself,
	allow stealing while in hack-mover
	* exult.cc, audio/soundtest.cc: fixed scoll rendering bug

2000-12-12  Willem Jan Palnestijn <palenstijn@wanadoo.nl>
	* mapedit/.cvsignore: added
	* .cvsignore: added u7midi

2000-12-11  Max Horn  <max@quendi.de>
	* lots-o-files: applied some of the changes from Christoph Reichenbach <jameson@linuxgames.com>
	  I didn't incorporate all changes yet, though.
	* exult.cc: on mac, META (=Command key) is now used instead of ALT

2000-12-11  Max Horn  <max@quendi.de>
	* audio/Mixer.*: some code cleanup

2000-12-09  Max Horn  <max@quendi.de>
	* Text_gump.h: fixed delete -> delete []

2000-12-09  Tristan Tarrant <nadir@users.sourceforge.net>
	* txtscroll.cc: support "double hash"
	* data/quotes.txt: Fixed quotes a bit
	* bggame.cc: stop speech if early exit
	* sigame.cc: small font fix
	* NEWS: updated

2000-12-09  Tristan Tarrant <nadir@users.sourceforge.net>
	* */Makefile.am: add a CLEANFILES def to all files

2000-12-07  Jeff Freedman  <jeff@amy.nerble.net>
	* mapedit: VERY rudimentary start of a GTK shape browser.
	* gamewin.cc: Stealing food is now a crime.
	* objs.h, chunks.cc:  Fixed my recent breakage of is_blocked().
