@@ -1,6 +1,11 @@
 2000-12-19  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
 	* configure.in: fixed --disable-long-long-warnings
 
+2000-12-18  Jeff Freedman  <jeff@amy.nerble.net>
+
+	* Shape dragging uses shape as its icon.
+	* Add objects that are dragged.
+
 2000-12-15  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
 	* conf/Configuration.cc: moved BeOS config file to ~/config/settings/
 
